@@ -3,16 +3,27 @@ package com.ucb.finlog.service;
 import com.ucb.finlog.dto.GeminiRequest;
 import com.ucb.finlog.dto.GeminiResponse;
 import com.ucb.finlog.model.Movimentacao;
+import com.ucb.finlog.model.TipoMovimentacao;
 import com.ucb.finlog.repository.MovimentacaoRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.HttpStatusCodeException;
 import org.springframework.web.client.RestTemplate;
 
+import java.math.BigDecimal;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
 public class AIService {
+
+    private static final Logger log = LoggerFactory.getLogger(AIService.class);
 
     @Value("${gemini.api.key}")
     private String apiKey;
@@ -31,13 +42,62 @@ public class AIService {
     public String obterConselhoIA(String emailUsuario) {
         List<Movimentacao> dados = repository.findByUsuarioEmail(emailUsuario);
 
-        String resumoFinanceiro = dados.stream()
-                .map(m -> m.getTipo() + ": " + m.getDescricao() + " R$" + m.getValor())
-                .collect(Collectors.joining(", "));
+        if (dados.isEmpty()) {
+            return "Comece a registrar suas transacoes para receber recomendacoes personalizadas!";
+        }
 
-        String prompt = "Aja como um mentor financeiro para o app FinLog. " +
-                "Analise estas transacoes: " + resumoFinanceiro +
-                ". De um conselho curto e motivador de no maximo 20 palavras.";
+        BigDecimal totalReceitas = dados.stream()
+                .filter(m -> m.getTipo() == TipoMovimentacao.RECEITA)
+                .map(Movimentacao::getValor)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        BigDecimal totalDespesas = dados.stream()
+                .filter(m -> m.getTipo() == TipoMovimentacao.DESPESA)
+                .map(Movimentacao::getValor)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        BigDecimal saldo = totalReceitas.subtract(totalDespesas);
+
+        Map<String, BigDecimal> gastosPorCategoria = dados.stream()
+                .filter(m -> m.getTipo() == TipoMovimentacao.DESPESA)
+                .collect(Collectors.groupingBy(
+                        m -> m.getCategoria() != null ? m.getCategoria().getNome() : "Sem categoria",
+                        Collectors.reducing(BigDecimal.ZERO, Movimentacao::getValor, BigDecimal::add)
+                ));
+
+        String categoriaComMaiorGasto = gastosPorCategoria.entrySet().stream()
+                .max(Map.Entry.comparingByValue())
+                .map(Map.Entry::getKey)
+                .orElse("gastos gerais");
+
+        BigDecimal maiorGasto = gastosPorCategoria.values().stream()
+                .max(BigDecimal::compareTo)
+                .orElse(BigDecimal.ZERO);
+
+        String resumoFinanceiro = String.format(
+                "Receitas: R$%.2f | Despesas: R$%.2f | Saldo: R$%.2f | Maior gasto em %s: R$%.2f",
+                totalReceitas,
+                totalDespesas,
+                saldo,
+                categoriaComMaiorGasto,
+                maiorGasto
+        );
+
+        String listaUltimasTransacoes = dados.stream()
+                .limit(5)
+                .map(m -> String.format(
+                        "%s (%s): R$%.2f",
+                        m.getDescricao(),
+                        m.getCategoria() != null ? m.getCategoria().getNome() : "Geral",
+                        m.getValor()
+                ))
+                .collect(Collectors.joining(" | "));
+
+        String prompt = "Voce e um mentor financeiro do app FinLog. " +
+                "Analise este resumo: " + resumoFinanceiro + ". " +
+                "Ultimas transacoes: " + listaUltimasTransacoes + ". " +
+                "De um conselho pratico e motivador de no maximo 40 palavras, focando em reduzir gastos em " +
+                categoriaComMaiorGasto + " ou aproveitar melhor as receitas.";
 
         var request = new GeminiRequest(List.of(
                 new GeminiRequest.Content(List.of(
@@ -45,11 +105,25 @@ public class AIService {
                 ))
         ));
 
-        String urlComChave = apiUrl + "?key=" + apiKey;
-        GeminiResponse response = restTemplate.postForObject(urlComChave, request, GeminiResponse.class);
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.set("x-goog-api-key", apiKey);
+
+        HttpEntity<GeminiRequest> entity = new HttpEntity<>(request, headers);
+
+        GeminiResponse response;
+        try {
+            response = restTemplate.postForObject(apiUrl, entity, GeminiResponse.class);
+        } catch (HttpStatusCodeException e) {
+            log.error("ERRO GEMINI - status={} corpo={}", e.getStatusCode(), e.getResponseBodyAsString());
+            return "Erro ao conectar com a IA. Tente novamente.";
+        } catch (RuntimeException e) {
+            log.error("ERRO GEMINI - falha inesperada ao chamar a API", e);
+            return "Erro ao conectar com a IA. Tente novamente.";
+        }
 
         if (response != null && !response.candidates().isEmpty()) {
-            return response.candidates().get(0).content().parts().get(0).text();
+            return response.candidates().getFirst().content().parts().getFirst().text();
         }
 
         return "Continue acompanhando seus gastos para um futuro melhor!";
